# rowan-ndarray

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  DenseTest.hs  LICENSE  README.md  Test.hs  TypeableTest.hs  cabal-nix.project  cabal.project  default.nix  names&objectives.txt  ndarray.cabal  ndarray.nix  nixpkgs.nix  numskull.cabal  numskull.nix  result  rowan-ndarray.cabal  shell.nix  sources.json
app/: Main.hs
bench/: Bench.hs
demo/: default.nix
demo/notebook/: Rowan-Presentation.ipynb  start.sh
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.0.2/: package.cache  rowan-ndarray-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-8.8.4/: ndarray-0.1.0.0-inplace.conf  package.cache
dist-newstyle/src/: dense-eae85de93efe9af3.cache
docs/: Numskull.html
ihaskell/: default.nix  numskullover.nix  pkgs.nix
ihaskell/continuations/.ipynb_checkpoints/: Continuation-checkpoint.ipynb
ihaskell/demo/: Rowan-Presentation.ipynb  default.nix  result  serialisationdemo.npy
ihaskell/demo/.ipynb_checkpoints/: Rowan-Presentation-checkpoint.ipynb
ihaskell/numskulltest/: AddAnother.ipynb  AddMatrix.hs
nix/: nixpkgs.nix  sources.json  sources.nix
src/: DType.hs  Indexing.hs  MatrixForm.hs  NdArray.hs  NdArrayException.hs  Numskull.hs  Presentation.ipynb  QuasiSlice.hs  Serialisation.hs  SliceTest.hs  Test.hs  Typing.hs  default.nix  result
src/QuasiSlice/: Quote.hs
src/testout/: idk.npy
test/: DocTest.hs  Test.hs
test/Test/: Numskull.hs  Serialisation.hs  aikens_out.txt  rowans_out.txt  upper_triangle.py
test/Test/wiki/: Expr.hs
test/Test/wiki/Expr/: Quote.hs
tests/: VectorTest.hs
