cabal-version:      2.4
name:               numskull
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Rowan Mather
maintainer:         rowan@myrtle.ai
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    import library-deps
    exposed-modules:    Numskull
                      , NdArray
                      , NdArrayException
                      , DType
                      , MatrixForm
                      , Indexing
                      , QuasiSlice
                      , QuasiSlice.Quote
                      , Typing
                      , Serialisation
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.13.0.0
                    , vector
                    , split
                    , containers
                    , parsec
                    , template-haskell
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
