cabal-version:      2.4
name:               numskull
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Rowan Mather
maintainer:         rowan@myrtle.ai
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    exposed-modules:    Numskull
                      , NdArray
                      , NdArrayException
                      , DType
                      , MatrixForm
                      , Indexing
                      , QuasiSlice
                      , QuasiSlice.Quote
                      , Typing
                      , Serialisation
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.13.0.0 && <5
                    , vector
                    , split
                    , containers
                    , parsec
                    , template-haskell
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2 -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    build-depends:    base >=4.13.0.0 && <5
                    , numskull
                    , QuickCheck
                    , hspec
    main-is:          Test.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options: -O2 -Wall

executable bench
    build-depends:    base >=4.13.0.0 && <5
                    , numskull
                    , criterion
                    , deepseq
                    , hmatrix
                    , massiv
                    , mwc-random
                    , vector
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options: -O2 -Wall -threaded -with-rtsopts=-N
